# 22s-pa01-sussybaka

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Algorithm Analysis/: Data.xlsx  Data_Time.xlsx  Data_Value.xlsx
Algorithm Analysis/Test Input/size-10/: maxWidth1000-1.txt  maxWidth1000-2.txt  maxWidth2500-1.txt  maxWidth2500-2.txt  maxWidth5000-1.txt  maxWidth5000-2.txt
Algorithm Analysis/Test Input/size-100/: maxWidth1000-1.txt  maxWidth1000-2.txt  maxWidth2500-1.txt  maxWidth2500-2.txt  maxWidth5000-1.txt  maxWidth5000-2.txt
Algorithm Analysis/Test Input/size-1000/: maxWidth1000-1.txt  maxWidth1000-2.txt  maxWidth2500-1.txt  maxWidth2500-2.txt  maxWidth5000-1.txt  maxWidth5000-2.txt
Algorithm Analysis/Test Input/size-15/: maxWidth1000-1.txt  maxWidth1000-2.txt  maxWidth2500-1.txt  maxWidth2500-2.txt  maxWidth5000-1.txt  maxWidth5000-2.txt
Algorithm Analysis/Test Input/size-50/: maxWidth1000-1.txt  maxWidth1000-2.txt  maxWidth2500-1.txt  maxWidth2500-2.txt  maxWidth5000-1.txt  maxWidth5000-2.txt
Algorithm Analysis/Test Output/size-10/: maxWidth1000-1-bruteforce.txt  maxWidth1000-1-custom.txt  maxWidth1000-1-highvalue.txt  maxWidth1000-2-bruteforce.txt  maxWidth1000-2-custom.txt  maxWidth1000-2-highvalue.txt  maxWidth2500-1-bruteforce.txt  maxWidth2500-1-custom.txt  (+10 more)
input/: test2.txt
src/: BruteForce.cpp  BruteForce.h  Custom.cpp  Custom.h  HighValue.cpp  HighValue.h  Loader.cpp  Loader.h  Picture.cpp  Picture.h  SussyBakaRunner.cpp  SussyBakaRunner.h  main-timed.cpp  main.cpp  test.py  tokStr.cpp  tokStr.h
(+66 files in other folders)
