cmake_minimum_required(VERSION 3.15)
project(21f_flight_planner)

set(CMAKE_CXX_STANDARD 14)

configure_file(data/sample01-flight-data.txt data/sample01-flight-data.txt COPYONLY)
configure_file(data/sample01-req-flights.txt data/sample01-req-flights.txt COPYONLY)

add_executable(21f_flight_planner main.cpp catch_setup.cpp sample_tests.cpp test.cpp DSVector.h DSStack.h DSNode.h DSLinkedList.h DSAdjacencyList.h DSAdjacencyList.cpp DCNode.cpp DCNode.h OCNode.h OCNode.cpp DrFontenotsFavoriteFlightPlanner.h DrFontenotsFavoriteFlightPlanner.cpp PathNode.cpp PathNode.h)
